Trim fat from the build.gradle